Fixed display of popup
"border-spacing: 2px" in screen.css caused the border to look wrong, and
"margin: 0" was not cascading properly into input due to high specificity in
screen.css.

--- a/javascript/jsme/jsa.css
+++ b/javascript/jsme/jsa.css
@@ -1,6 +1,11 @@
+.gwt-DecoratedPopupPanel input[type=text] {
+    margin: 0;
+}
+
 .gwt-DecoratedPopupPanel table,.gwt-MenuBarPopup table {
     border-collapse: separate;
     border-color: transparent;
+    border-spacing: 0;
     border-style: none;
     border-width: medium;
     table-layout: auto;
